--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=80
 
+## MySQL
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weather?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=123456
+## MongoDB
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+##spring.data.mongodb.username=
+##spring.data.mongodb.password=
+spring.data.mongodb.database=weather
