--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username=sa
 #spring.datasource.password=sa
 server.port=8087
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=123456
 ## MongoDB
