--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,13 +3,12 @@
 #spring.datasource.username=sa
 #spring.datasource.password=sa
 server.port=8087
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=123456
 ## MongoDB
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
-##spring.data.mongodb.authentication-database=admin
-##spring.data.mongodb.username=
-##spring.data.mongodb.password=
 spring.data.mongodb.database=weather
