--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,12 @@
-#spring.datasource.driver-class-name=org.
-#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-#spring.datasource.username=sa
-#spring.datasource.password=sa
 server.port=8087
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:sqlite:weather.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=com.weather.weather.configurations.SQLiteDialect
 ## MongoDB
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
