--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,7 @@ spring.datasource.url=jdbc:sqlite:weather.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=com.weather.weather.configurations.SQLiteDialect
 ## MongoDB
+spring.jpa.properties.hibernate.ogm.datastore.create_database=true
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=weather
