--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,10 @@ spring.jpa.properties.hibernate.ogm.datastore.create_database=true
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=weather
+##
+weather.import-on-start-up=false
+weather.read-only=false
+weather.update-time=60
+##
+logging.file.name = error.log
+logging.level.root = ERROR
