--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,3 +19,6 @@ weather.update-time=60
 ##
 logging.file.name = error.log
 logging.level.root = ERROR
+##
+file.upload-dir=uploads/
+file.download-dir=download/
