--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,12 +13,13 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=weather
 ##
+weather.update=true
 weather.import-on-start-up=false
 weather.read-only=false
 weather.update-time=300
 ##
 logging.file.name = error.log
-logging.level.root = ERROR
+#logging.level.root = ERROR
 ##
 file.upload-dir=uploads/
 file.download-dir=download/
