--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,25 @@
-## MySQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherTEST?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=123456
+server.port=8087
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:sqlite:weatherTEST.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=com.weather.weather.configurations.SQLiteDialect
+## MongoDB
+spring.jpa.properties.hibernate.ogm.datastore.create_database=true
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=weatherTEST
+##
+weather.update=false
+weather.import-on-start-up=false
+weather.read-only=false
+weather.update-time=300
+##
+logging.file.name = errorTEST.log
+#logging.level.root = ERROR
+##
+file.upload-dir=uploadsTEST/
+file.download-dir=downloadTEST/
