--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,12 +1,25 @@
 server.port=8087
-## MySQL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weather?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/weatherdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:sqlite:weather.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.jpa.database-platform=com.weather.weather.configurations.SQLiteDialect
 ## MongoDB
+spring.jpa.properties.hibernate.ogm.datastore.create_database=true
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-##spring.data.mongodb.username=
-##spring.data.mongodb.password=
 spring.data.mongodb.database=weather
+##
+weather.update=true
+weather.import-on-start-up=false
+weather.read-only=false
+weather.update-time=300
+##
+logging.file.name = error.log
+#logging.level.root = ERROR
+##
+file.upload-dir=uploads/
+file.download-dir=download/
