--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,6 +17,7 @@ weather.update=true
 weather.import-on-start-up=false
 weather.read-only=false
 weather.update-time=10
+weather.api-key=82ca724eba719259cc2fa548dbe11898
 ##
 logging.file.name = error.log
 #logging.level.root = ERROR
