expiration time, kontrola json souboru

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,7 +16,10 @@ spring.data.mongodb.database=weather
 weather.update=true
 weather.import-on-start-up=false
 weather.read-only=false
+#sec
 weather.update-time=5
+#dny
+weather.expiration-time=14
 weather.api-key=82ca724eba719259cc2fa548dbe11898
 ##
 logging.file.name = error.log
