--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -17,6 +17,8 @@ weather.update=false
 weather.import-on-start-up=false
 weather.read-only=false
 weather.update-time=300
+#dny
+weather.expiration-time=14
 weather.api-key=82ca724eba719259cc2fa548dbe11898
 ##
 logging.file.name = errorTEST.log
