--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,5 +25,5 @@ weather.api-key=82ca724eba719259cc2fa548dbe11898
 logging.file.name = error.log
 #logging.level.root = ERROR
 ##
-file.upload-dir=uploads/
+file.upload-dir=temp_uploads/
 file.download-dir=download/
