--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -24,5 +24,5 @@ weather.api-key=82ca724eba719259cc2fa548dbe11898
 logging.file.name = errorTEST.log
 #logging.level.root = ERROR
 ##
-file.upload-dir=uploadsTEST/
+file.upload-dir=temp_uploadsTEST/
 file.download-dir=downloadTEST/
